--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.21.0",
     "easy-peasy": "^5.0.4",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -18,6 +20,7 @@
     "@types/react": "18.0.9",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "sass": "^1.52.3",
     "typescript": "4.7.2"
   }
 }
